kubernetes/services/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: url-shortener
    tier: database
spec:
  type: ClusterIP
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
    name: mongodb
  selector:
    app: url-shortener
    tier: database
