kubernetes/services/url-shortener-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: url-shortener
  labels:
    app: url-shortener
    tier: frontend
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: url-shortener
    tier: frontend
